# cnn-image-recognition

./: .gitignore  README.md  index.js  index.py  pyproject.toml
main_window/: main_app.py  options_window.py
structures/: conv.py  conv1.py  conv2.py  fclayer.py  index.py  maxpool.py  network.py  perceptron.py  tempCodeRunnerFile.py
