[project]
name = "cnn-image-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.13.7",
    "keras>=3.6.0",
    "tensorflow>=2.17.0",
]
